# pulselogic-bpf

./: .gitignore  BENCHMARK_SUMMARY.md  CITATION.cff  LICENSE  PUBLICATIONS_AND_IP.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  test.yml
benchmark/: REPRODUCIBILITY.md
benchmark/checkpoints/: BLCA.json  COAD.json  ESCA.json  GBM.json  GSE15459_STAD.json  GSE2990_BRCA.json  GSE31684_BLCA.json  GSE37745_LUNG.json  GSE68465_LUAD.json  HNSC.json  ICGC_BLCA-US.json  ICGC_BRCA-US.json  ICGC_CESC-US.json  ICGC_COAD-US.json  ICGC_GBM-US.json  ICGC_KIRP-US.json  ICGC_LAML-US.json  ICGC_LGG-US.json  ICGC_LIHC-US.json  ICGC_LUAD-US.json  ICGC_LUSC-US.json  ICGC_OV-US.json  ICGC_PAAD-US.json  ICGC_SKCM-US.json  ICGC_STAD-US.json  ICGC_THCA-US.json  ICGC_UCEC-US.json  KIRP.json  LAML.json  LGG.json  LIHC.json  LUAD.json  LUSC.json  METABRIC.json  OV.json  SARC.json  SKCM.json  UCEC.json
benchmark/reports/: BLCA_report.txt  COAD_report.txt  ESCA_report.txt  GBM_report.txt  GSE15459_STAD_report.txt  GSE2990_BRCA_report.txt  GSE31684_BLCA_report.txt  GSE37745_LUNG_report.txt  GSE68465_LUAD_report.txt  HNSC_report.txt  ICGC_BLCA-US_report.txt  ICGC_BRCA-US_report.txt  ICGC_CESC-US_report.txt  ICGC_COAD-US_report.txt  ICGC_GBM-US_report.txt  ICGC_KIRP-US_report.txt  ICGC_LAML-US_report.txt  ICGC_LGG-US_report.txt  ICGC_LIHC-US_report.txt  ICGC_LUAD-US_report.txt  ICGC_LUSC-US_report.txt  ICGC_OV-US_report.txt  ICGC_PAAD-US_report.txt  ICGC_SKCM-US_report.txt  ICGC_STAD-US_report.txt  ICGC_THCA-US_report.txt  ICGC_UCEC-US_report.txt  KIRP_report.txt  LGG_report.txt  LIHC_report.txt  LUAD_report.txt  LUSC_report.txt  METABRIC_report.txt  SARC_report.txt  SKCM_report.txt  UCEC_report.txt
benchmark/results/: benchmark_comparisons.csv  benchmark_figure_data.json  benchmark_long.csv  (+2 more)
configs/: canonical_v1_0_0.yaml  default_params.yaml
examples/: toy_expression.csv  toy_labels.csv
scripts/: run_bpf.py
tests/: test_alignment.py  test_auc_ranker.py  test_bootstrap.py  test_cli.py  test_compliance.py  test_config_validation.py  test_determinism.py  test_feature_auc_bootstrap.py  test_fingerprint.py  test_fusion.py  test_quarantine.py  test_selection_policy.py  test_weights.py
(+59 files in other folders)
