[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulselogic-bpf"
version = "0.1.0"
description = "Canonical public repository for the Biomarker Probability Fusion pipeline."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Christopher Dowden" }
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.12",
  "scikit-learn>=1.4",
  "pyyaml>=6.0",
]

[project.scripts]
bpf = "bpf.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]