[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulselogic-bpf"
version = "2.3.0"
description = "Biomarker Probability Fusion (BPF) — a deterministic univariate feature selection framework for high-dimensional transcriptomic biomarker discovery."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Christopher B. Dowden", email = "ceo@pulselogic.bio" }
]
keywords = [
  "bioinformatics",
  "feature selection",
  "biomarker discovery",
  "transcriptomics",
  "machine learning",
  "AUC",
  "LASSO",
  "cross-validation",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "numpy==1.24.0",
  "pandas==2.0.0",
  "scipy>=1.12",
  "scikit-learn==1.3.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.urls]
"Homepage" = "https://github.com/pulselogicbio/pulselogic-bpf"
"Repository" = "https://github.com/pulselogicbio/pulselogic-bpf"
"Bug Tracker" = "https://github.com/pulselogicbio/pulselogic-bpf/issues"

[project.scripts]
bpf = "bpf.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
